--- a/style.css
+++ b/style.css
@@ -2,5 +2,11 @@ body{
     background-color: black;
     color:rgb(22, 103, 105);
 }h3{
-    
+    text-align: center;
+}
+
+.primeiro-título{
+
+    color: blanchedalmond;
+    text-align: left;
 }
