--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
 body{
     background-color: black;
     color:rgb(22, 103, 105);
-}h3{
+}
+
+h3{
     text-align: center;
 }
 
 .primeiro-título{
 
-    color: blanchedalmond;
+    color: rgb(14, 1, 71);
     text-align: left;
+    background-color: rgb(255, 255, 255);
+    margin: 20px;
+    padding-left: 10px;
 }
